--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -32,6 +32,9 @@ jobs:
       matrix:
         goos: [linux, windows, darwin]
         goarch: [amd64, arm64]
+        include:
+          - goos: android
+            goarch: arm64
     steps:
       - name: Checkout
         uses: actions/checkout@v4
