--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,3 @@
 {
-  "cSpell.words": ["github", "samber", "userid", "uuid"]
+  "cSpell.words": ["github", "kong", "netlink", "samber", "userid", "uuid", "vlan"]
 }
