--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,22 @@
 {
-  "cSpell.words": ["github", "kong", "netlink", "samber", "userid", "uuid", "vlan"]
+  "cSpell.words": [
+    "alecthomas",
+    "BINDTODEVICE",
+    "dhcpv",
+    "dustin",
+    "github",
+    "hostnames",
+    "insomniacslk",
+    "kong",
+    "logoutgourl",
+    "Mbps",
+    "netlink",
+    "quickauth",
+    "quickauthdisconn",
+    "samber",
+    "userid",
+    "uuid",
+    "vishvananda",
+    "vlan"
+  ]
 }
