--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -57,6 +57,18 @@ jobs:
           if [ "${GOOS}" = "windows" ]; then BIN_NAME="${BIN_NAME}.exe"; fi
           go build -trimpath -ldflags "-s -w" -o "build/${BIN_NAME}" ./
 
+      - name: Install UPX
+        run: |
+          sudo apt-get update
+          sudo apt-get install -y upx
+
+      - name: Compress binary with UPX
+        if: ${{ matrix.goos != 'darwin' && matrix.goos != 'android' }}
+        run: |
+          BIN_NAME="easy-net-${{ matrix.goos }}-${{ matrix.goarch }}"
+          if [ "${{ matrix.goos }}" = "windows" ]; then BIN_NAME="${BIN_NAME}.exe"; fi
+          upx --best --lzma "build/${BIN_NAME}"
+
       - name: Package artifact
         run: |
           mkdir -p dist
