--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -63,7 +63,7 @@ jobs:
           sudo apt-get install -y upx
 
       - name: Compress binary with UPX
-        if: ${{ matrix.goos != 'darwin' && matrix.goos != 'android' }}
+        if: ${{ !(matrix.goos == 'darwin' || matrix.goos == 'android' || (matrix.goos == 'windows' && matrix.goarch == 'arm64')) }}
         run: |
           BIN_NAME="easy-net-${{ matrix.goos }}-${{ matrix.goarch }}"
           if [ "${{ matrix.goos }}" = "windows" ]; then BIN_NAME="${BIN_NAME}.exe"; fi
